fix issues with iframes being too wide in mobile view

--- a/_scss/base/_base.scss
+++ b/_scss/base/_base.scss
@@ -58,5 +58,9 @@ a,
 
 .full-container {
   @include full-container();
+
+  * {
+    padding: 0;
+  }
 }
 
